--- a/.gitignore
+++ b/.gitignore
@@ -21,14 +21,12 @@ _minted-wp/
 *.crumbs
 package/
 svg-inkscape/
-01-integration/01-integration.pdf
-02-scope/02-scope.pdf
-03-time/03-time.pdf
-04-cost/04-cost.pdf
-05-quality/05-quality.pdf
-06-resources/06-resources.pdf
-07-communications/07-communications.pdf
-08-risk/08-risk.pdf
-09-procurement/09-procurement.pdf
-10-stakeholder/10-stakeholder.pdf
+01-debating/01-debating.pdf
+02-reporting-bugs/02-reporting-bugs.pdf
+03-making-changes/03-making-changes.pdf
+04-reviewing-changes/04-reviewing-changes.pdf
+05-setting-guidelines/05-setting-guidelines.pdf
+06-integrating/06-integrating.pdf
+07-releasing/07-releasing.pdf
+08-gaining-popularity/08-gaining-popularity.pdf
 syllabus/syllabus.pdf
