--- a/.github/workflows/bibcop.yml
+++ b/.github/workflows/bibcop.yml
@@ -6,5 +6,5 @@ jobs:
   bibcop:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       - uses: yegor256/bibcop-action@master
