--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -9,7 +9,7 @@ jobs:
   latexmk:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+      - uses: actions/checkout@v4
       - uses: yegor256/latexmk-action@0.11.1
         with:
           cmd: make
