--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bibliography"]
 	path = bibliography
 	url = https://github.com/yegor256/bibliography
+[submodule "faces"]
+	path = faces
+	url = https://github.com/yegor256/faces
