--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -18,7 +18,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 ---
-name: latexmk
+name: yamllint
 'on':
   push:
     branches:
@@ -27,24 +27,8 @@ name: latexmk
     branches:
       - master
 jobs:
-  latexmk:
+  yamllint:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - uses: yegor256/latexmk-action@0.15.0
-        with:
-          cmd: make
-<<<<<<< Updated upstream
-          depends: DEPENDS.txt
-      - uses: JamesIves/github-pages-deploy-action@v4.7.2
-=======
-          depends: lecture-notes/DEPENDS.txt
-      - uses: JamesIves/github-pages-deploy-action@v4.6.9
->>>>>>> Stashed changes
-        with:
-          branch: gh-pages
-          folder: package
-          clean: false
-        if: github.ref == 'refs/heads/master'
+      - uses: ibiqlik/action-yamllint@v3
