--- a/.github/workflows/latexmk.yml
+++ b/.github/workflows/latexmk.yml
@@ -38,6 +38,7 @@ jobs:
           cmd: make
           depends: lecture-notes/DEPENDS.txt
       - uses: JamesIves/github-pages-deploy-action@v4.7.2
+        with:
           branch: gh-pages
           folder: package
           clean: false
