--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ _minted-wp/
 *.toc
 *.crumbs
 package/
+face-1024x1024.jpg
 svg-inkscape/
 01-debating/01-debating.pdf
 02-reporting-bugs/02-reporting-bugs.pdf
