--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,23 @@
-.DS_Store
-target/
-_minted-*/
-*.idx
-*.ilg
-*.ind
+*-SAVE-ERROR
+*.aux
 *.bbl
 *.bcf
 *.blg
-*.fdb_latexmk
-_minted-wp/
-*.fls
-*.log
-*.run.xml
-*.aux
-*.pyg
-*.out
-*.dvi
-*.xcp
-*.toc
 *.crumbs
-package/
-face-1024x1024.jpg
-svg-inkscape/
+*.dvi
+*.fdb_latexmk
+*.fls
+*.idx
+*.ilg
+*.ind
+*.log
+*.out
+*.pyg
+*.run.xml
+*.toc
+*.xcp
+.DS_Store
+.idea/
 01-debating/01-debating.pdf
 02-reporting-bugs/02-reporting-bugs.pdf
 03-making-changes/03-making-changes.pdf
@@ -30,5 +26,11 @@ svg-inkscape/
 06-integrating/06-integrating.pdf
 07-releasing/07-releasing.pdf
 08-gaining-popularity/08-gaining-popularity.pdf
+_minted-*/
+_minted-wp/
+face-1024x1024.jpg
+node_modules/
+package/
+svg-inkscape/
 syllabus/syllabus.pdf
-*-SAVE-ERROR
+target/
